Make background cloud stretch instead of fixed

--- a/src/input.css
+++ b/src/input.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.cloud {
+    background-image: url("../src/images/cloud.svg");
+    background-size: 100% 100%;
+}
